--- a/material-kit-react-main/package.json
+++ b/material-kit-react-main/package.json
@@ -56,13 +56,18 @@
     "history": "^5.0.1",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
+    "primeicons": "^5.0.0",
+    "primereact": "^7.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.1.2",
+    "react-loading-screen": "0.0.17",
     "react-router-dom": "^6.0.0-beta.4",
     "react-scripts": "^4.0.1",
+    "react-toastify": "^8.1.0",
+    "react-transition-group": "^4.4.1",
     "simplebar": "^5.3.5",
     "simplebar-react": "^2.3.5",
     "web-vitals": "^2.1.0",
@@ -73,14 +78,11 @@
     "@babel/eslint-parser": "^7.15.7",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^6.0.1",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.25.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.4.1"
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
