time card and time card approve operations completed. edited pages.

--- a/material-kit-react-main/package.json
+++ b/material-kit-react-main/package.json
@@ -46,15 +46,18 @@
     "@mui/material": "^5.0.0",
     "@mui/utils": "^5.0.0",
     "@testing-library/jest-dom": "^5.14.1",
-    "apexcharts": "^3.28.3",
+    "apexcharts": "^3.33.0",
     "axios": "^0.24.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.24.0",
     "faker": "^5.5.3",
+    "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "history": "^5.0.1",
+    "loadjs": "^4.2.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "numeral": "^2.0.6",
     "primeicons": "^5.0.0",
     "primereact": "^7.1.0",
@@ -66,6 +69,8 @@
     "react-loading-screen": "0.0.17",
     "react-router-dom": "^6.0.0-beta.4",
     "react-scripts": "^4.0.1",
+    "react-signature-pad-wrapper": "^3.1.1",
+    "react-time-picker": "^4.4.4",
     "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.1",
     "simplebar": "^5.3.5",
