--- a/material-kit-react-main/package.json
+++ b/material-kit-react-main/package.json
@@ -46,6 +46,7 @@
     "@mui/material": "^5.0.0",
     "@mui/utils": "^5.0.0",
     "@testing-library/jest-dom": "^5.14.1",
+    "apexcharts": "^3.33.1",
     "axios": "^0.24.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.24.0",
@@ -54,20 +55,20 @@
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "history": "^5.0.1",
+    "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
     "primeicons": "^5.0.0",
-    "apexcharts": "3.33.1",
     "primereact": "^7.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
-    "apexcharts": "^3.33.1",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.1.2",
     "react-loading-screen": "0.0.17",
     "react-router-dom": "^6.0.0-beta.4",
+    "react-script-tag": "^1.1.2",
     "react-scripts": "^4.0.1",
     "react-signature-pad-wrapper": "^3.1.1",
     "react-time-picker": "^4.4.4",
