--- a/material-kit-react-main/package.json
+++ b/material-kit-react-main/package.json
@@ -55,7 +55,6 @@
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "history": "^5.0.1",
-    "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "numeral": "^2.0.6",
@@ -65,14 +64,14 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
+    "react-file-input-previews-base64": "^1.0.8",
     "react-helmet-async": "^1.1.2",
     "react-loading-screen": "0.0.17",
     "react-router-dom": "^6.0.0-beta.4",
-    "react-script-tag": "^1.1.2",
     "react-scripts": "^4.0.1",
     "react-signature-pad-wrapper": "^3.1.1",
     "react-time-picker": "^4.4.4",
-    "react-toastify": "^8.1.0",
+    "react-toastify": "^8.2.0",
     "react-transition-group": "^4.4.1",
     "simplebar": "^5.3.5",
     "simplebar-react": "^2.3.5",
